fix(test): update CSV assertions to match ChatMessage record fields